aligned project section and fixed spacing

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -99,7 +99,8 @@ header nav ul li a:hover {
 
 /* General purpose styles*/
 section {
-    padding-top: 2%;
+    padding-top: 1%;
+    padding-bottom: 1%;
     flex-wrap:wrap;
 }
 section h3 {
@@ -127,55 +128,89 @@ section h3 {
 .about p {
     line-height: 1.5;
     color: var(--tertiary-color);
-    width: 90%;
+    width: 100%;
     font-size: 20px;
-    padding: 0 3%;
+    padding-left: 5%;
     border-left: 6px solid var(--tertiary-color);
 }
 /* end of about me*/
 
 /* Work/Project section */
-.projects {
+
+.example {
+    border-left: 6px solid var(--tertiary-color);
     flex-wrap: wrap;
+    padding-left: 3%;
+}
+
+.show-work {
+    display: flex;
+    flex-wrap:wrap;
     justify-content: space-between;
+    width: 49%;
+    margin-bottom: 1%;
+    margin-right: 1%;
+}
+.hero-work {
     width: 100%;
 }
 
-.example {
-    flex-wrap:wrap;
-    justify-content: flex-start;
-    border-left: 6px solid var(--tertiary-color);
-    padding: 0 3%;
+.project {
+    width:100%;
+    border: 7px solid var(--primary-color);
+    background-size: cover;
+    background-position: center;
     flex-direction: column;
+}
 
+.project-1{
+    background-image: url("../images/project-1.jpg");
+}
+
+
+.project-2{
+    background-image: url("../images/project-2.jpg");
+}
+
+.project-3{
+    background-image: url("../images/project-3.jpg");
+}
+
+.project-4 {
+    background-image: url("../images/project-4.jpg");
+}
+
+.project-5 {
+    background-image: url("../images/project-5.jpg");
+    background-position: top;
+}
+
+.project:hover {
+    opacity: 1;
+    cursor: pointer;
+    transition-duration: .75s;
 }
 
 .project-title {
-    align-items: flex-end;
+    align-items: flex-start;
     background-color: var(--primary-color);
     text-align: left;
     padding: 10px;
     color: var(--secondary-color);
-    margin-bottom: 25%;
-}
-.set-up{
-    align-items: flex-end;
-}
-
-article {
-    display:flex;
-    width: 80%;
-    padding: 1% 0;
-    height: 10%;
-}
-article img {
-    width: 50%;
-    border: 6px solid var(--primary-color);
-    opacity: 0.5;
+    margin-top: 20%;
+    margin-bottom: 5%;
+    display: flex;
+    flex-direction: column;
 }
 
-article img:hover {
-    opacity: 1;
+/*article div a {
+    width: 100%;
+	padding: 155px 45px 0 63px;
+    background-color: honeydew;
+}*/
+
+.set-up  {
+    align-items: flex-start;
 }
 /* end of work*/
 
@@ -192,7 +227,8 @@ article img:hover {
     flex-wrap:wrap;
     align-items: center;
     list-style: none;
-    width: 90%;
+    width: 100%;
+    padding-left: 3%;
 }
 
 .info nav ul li a {
@@ -207,6 +243,27 @@ article img:hover {
 
 /* MEDIA QUERY for smaller desktop screens*/
 @media screen and (max-width: 980px){
+    header {
+        padding-bottom: 0;
+        justify-content: center;
+        position: relative;
+    }
+
+    header h1 {
+        width: 100%;
+        text-align: center;
+    }
+
+    header nav ul {
+        margin-top: 20px;
+        width: 100%;
+        justify-content: center;
+    }
+
+    header nav ul li a {
+        font-size: 20px;
+    }
+
 }
 
 /* MEDIA QUERY for Tablets and smaller*/
